--- a/asg0/asg0.html
+++ b/asg0/asg0.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>Draw a blue rectangle (canvas version)</title>
 	<style>
-		body {
+		body{
 		  background-color: linen;
-		  line-height: 2px;
+		  /* line-height: 2px; */
 		}
 		
 		
@@ -19,6 +19,13 @@
   </head>
 
   <body onload="main()">
+	
+	<div class="ilovecrack">
+	<p>
+		David Wu<br>
+		dwu64@ucsc.edu<br>
+	</p>
+	</div>
   
     <canvas id="canvas1" width="400" height="400">
       Please use a browser that supports "canvas"
