--- a/asg1/asg1.html
+++ b/asg1/asg1.html
@@ -11,7 +11,12 @@
     </canvas>
 	
 	
-	
+	<p>
+		Fancy new thing is the "Custom Triangle", which allows you to click three points to define a triangle.
+		
+	<p>Caveats: Resets your entire canvas, can only create 1 custom triangle at a time, and there's a weird bug where a small triangle appears in the middle.
+	</p>
+		
 	<p>
 		<button type="button" id="clearButton"> Clear </button>
 		<button type="button" id="drawPictureButton" onclick="drawPicture()"> Draw Picture </button>
