--- a/asg3/asg3.html
+++ b/asg3/asg3.html
@@ -6,14 +6,17 @@
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="400" height="400">
+    <canvas id="webgl" width="1280" height="1024">
     Please use a browser that supports "canvas"
     </canvas>
 	
 	<p id="numdot"> XXX </p>
 	<p>
-		Horizontal Angle <input type="range" min="90" max="450" value="0" class="slider" id="horizontalAngleSlider">
-	
+		Controls:
+			Use WASD to move forward/left/back/right.
+			Use Q/E to look left/right. Use R/F to look up/down.
+			(Alternatively, click and drag to move the camera around).
+			Use C/V to move up/down.
 	<p>
 		Rotate Arm <input type="range" min="0" max="360" value="5" class="slider" id="angleLeftArm">
 		Rotate 2nd Tail Segment <input type="range" min="-180" max="180" value="-10" class="slider" id="angleGoldBar">
@@ -25,6 +28,7 @@
 		
 	
 	<p>
+		
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
@@ -36,6 +40,6 @@
 	<script src="Point.js"></script>
 	<script src="Cube.js"></script>
 	<script src="Camera.js"></script>
-	<script src="asg2.js"></script>
+	<script src="asg3.js"></script>
   </body>
 </html>
