--- a/asg5/index.html
+++ b/asg5/index.html
@@ -21,5 +21,5 @@
   <body>
     <canvas id="c"></canvas>
   </body>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </html>
