--- a/asg5/index.html
+++ b/asg5/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+    <base href=".">
 		<meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>Three.js - Fundamentals with animation</title>
