--- a/asg5/index.html
+++ b/asg5/index.html
@@ -22,5 +22,10 @@
   <body>
     <canvas id="c"></canvas>
   </body>
+  <script  type="importmap">{
+    "imports": {
+      "three": "https://threejs.org/build/three.module.js"
+    }
+  }</script>
   <script type="module" src="./main.js"></script>
 </html>
