--- a/asg5/index.html
+++ b/asg5/index.html
@@ -24,7 +24,8 @@
   </body>
   <script  type="importmap">{
     "imports": {
-      "three": "https://threejs.org/build/three.module.js"
+      "three": "https://threejs.org/build/three.module.js",
+      "three/addons/": "https://threejs.org/examples/jsm/"
     }
   }</script>
   <script type="module" src="./main.js"></script>
